# backend/internal/server/controllers/auth/auth.go
@@ -4,7 +4,9 @@ import (
 	"net/http"
 
 	_ "github.com/IainMcl/HereWeGo/docs"
+	"github.com/IainMcl/HereWeGo/internal/logging"
 	models "github.com/IainMcl/HereWeGo/internal/models/user"
+	"github.com/IainMcl/HereWeGo/internal/services"
 	"github.com/IainMcl/HereWeGo/internal/util"
 	"github.com/jmoiron/sqlx"
 	"github.com/labstack/echo/v4"
@@ -21,6 +23,8 @@ func Setup(d *sqlx.DB, a, r *echo.Group) (*echo.Group, *echo.Group) {
 	authAnon.POST("/login", Login)
 	authAnon.POST("/register", Register)
 	authRes.POST("/logout", Logout)
+	authAnon.GET("/sendresetpasswordemail", SendResetPasswordEmail)
+	authAnon.POST("/resetpassword", ResetPassword)
 	return authAnon, authRes
 }
 
@@ -46,6 +50,7 @@ type RegisterResponse struct {
 type ResetPasswordRequest struct {
 	Email       string `json:"email"`
 	NewPassword string `json:"new_password"`
+	Token       string `json:"token"`
 }
 
 // Login godoc
@@ -129,7 +134,40 @@ func Logout(c echo.Context) error {
 //	@Success		200
 //	@Router			/auth/resetpassword [post]
 func ResetPassword(c echo.Context) error {
-	return c.JSON(http.StatusOK, map[string]string{"message": "Reset password"})
+	var req ResetPasswordRequest
+	if err := c.Bind(&req); err != nil {
+		return c.JSON(http.StatusBadRequest, map[string]string{"message": "Invalid request"})
+	}
+
+	if req.Email == "" || req.NewPassword == "" || req.Token == "" {
+		return c.JSON(http.StatusBadRequest, map[string]string{"message": "Email, new password and token are required"})
+	}
+
+	token, err := util.GetTokenFromDB(db, req.Token, req.Email)
+	if err != nil {
+		return c.JSON(http.StatusUnauthorized, map[string]string{"message": "Invalid token"})
+	}
+	if token.IsExpired() {
+		return c.JSON(http.StatusUnauthorized, map[string]string{"message": "Token expired"})
+	}
+
+	user, err := models.GetUserByEmail(db, req.Email)
+	if err != nil {
+		logging.Fatal("Error getting user from db after using valid OTP token: ", err)
+		return c.JSON(http.StatusNotFound, map[string]string{"message": "Email not found"})
+	}
+
+	err = util.UseToken(db, req.Token, user.ID)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{"message": "Failed to use token"})
+	}
+
+	err = user.UpdatePassword(db, req.NewPassword)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{"message": "Failed to update password"})
+	}
+
+	return c.JSON(http.StatusOK, map[string]string{"message": "Passowrd updated successfully"})
 }
 
 // SendResetPasswordEmail godoc
@@ -141,6 +179,23 @@ func ResetPassword(c echo.Context) error {
 //	@Param			email	query	string	true	"Email to send reset password email to"
 //	@Success		200
 //	@Router			/auth/sendresetpasswordemail [get]
-func SendResetPasswordEmail(c echo.Context) error {
-	return c.JSON(http.StatusOK, map[string]string{"message": "Send reset password email"})
+func SendResetPasswordEmail(c echo.Context) error { // Verify that the email exists in the database
+	email := c.QueryParam("email")
+	if !services.ValidateEmail(email) {
+		return c.JSON(http.StatusBadRequest, map[string]string{"message": "Invalid email"})
+	}
+	user, err := models.GetUserByEmail(db, email)
+	if err != nil {
+		return c.JSON(http.StatusNotFound, map[string]string{"message": "Email not found"})
+	}
+
+	token, err := util.NewOTPToken(db, user.ID)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{"message": "Failed to generate token"})
+	}
+	if err := services.SendResetPasswordEmail(user.Email, user.Username, user.ID, token); err != nil {
+		return c.JSON(http.StatusInternalServerError, map[string]string{"message": "Failed to send reset password email"})
+	}
+	obscuredEmail := services.ObscureEmail(email)
+	return c.JSON(http.StatusOK, map[string]string{"message": "Reset password email sent to " + obscuredEmail})
 }
